# CarbonComet

./: Makefile~  config.h  config.h.in  config.status  configure.ac  libtool
FFLib/: #main2.c#  Makefile  a.out  libcometd.dylib  main.c  main.c~  server  server.c
FFLib/includes/: cometd.h
FFLib/includes/cometd/: channel.h  ext.h  json.h~  transport.h
FFLib/includes/cometd/exts/: logger.h  yammer.h
FFLib/src/: channel.c  channel.c~  cometd.c  cometd.c~  conn.c  conn.c~  ext.c  http.c  http.c~  json.c  msg.c  msg.c~  transport_long_polling.c  transport_web_socket.c  transport_web_socket.c~
FFLib/src/exts/: logger.c~  yammer.c~
FFLib/src/loops/: gthread.c
FFLib/test/: #Makefile#  Makefile  Makefile~  client.c  client.c~  test.c
FFLib/test/lib/: #Makefile#  wslay_event.h  wslay_frame.h  wslay_net.h  wslay_queue.h  wslay_stack.h
FFLib/test/wslay-master/doc/: Makefile.am
PLib/: Makefile  Makefile.in  README  configure
PLib/autom4te.cache/: requests  traces.1
PLib/src/: #cometd.h#  Makefile  Makefile~  comet_buffer.c  comet_buffer.lo  comet_message.h  comet_message.lo  cometd.c  cometd.h  cometd.lo  http_transport.c  http_transport.lo  libcometd.la  libzetapush.la  zetaclient.c  zetaclient.lo  ztest.c
PLib/src/.deps/: comet_buffer.Plo  comet_message.Plo  cometd.Plo
PLib/src/makehome/: Makefile  a.out  cat  login  test.c
autom4te.cache/: output.2  traces.0  traces.2
mywslay/: Makefile  Makefile.in  Makefile~  config.h  config.h.in~  config.status  configure  libtool
mywslay/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2  traces.3
mywslay/doc/: #Makefile.am#  #Makefile.in#  Makefile  Makefile.am  Makefile.in  Makefile.in~  Makefile~
mywslay/examples/: Makefile  Makefile.in  a.out  myClient.c  myClient.c~  testclient.cc
mywslay/examples/.deps/: echoserv.Po  fork-echoserv.Po  testclient.Po
mywslay/examples/.libs/: lt-testclient
mywslay/examples/includes/: cometd.h~
mywslay/examples/src/: channel.c~  cometd.c  error.c  error.c~  event.c  event.c~  ext.c~  http.c  http.c~  inbox.c  inbox.c~  json.c~  loop.c  loop.c~  msg.c  msg.c~  transport.c  transport.c~  transport_long_polling.c~
mywslay/lib/: Makefile  Makefile.in  libwslay.la  wslay_event.lo  wslay_frame.lo  wslay_net.lo  wslay_queue.lo
mywslay/lib/.deps/: wslay_event.Plo  wslay_frame.Plo  wslay_net.Plo  wslay_queue.Plo
mywslay/lib/.libs/: libwslay.lai  libwslay.so.0  libwslay.so.0.0.1
mywslay/lib/includes/: Makefile  Makefile.in
mywslay/tests/: Makefile  Makefile.in
src/: comet_message.c  cometd_internal.h
src/.deps/: http_transport.Plo  zetaclient.Plo
src/makehome/: #Makefile#  Makefile  Makefile~
(+11 files in other folders)
